fix: upgrade fabric and image build options
This makes the following changes:

* arrange configs around the idea of cross-season, cross-world configs vs 'core' initial configs
* copy server.properties, ban-lists, etc. not just eula.txt into the image
* move out the mods in anticipation of building our first 'season' of mods
* migrate to fedora-minimal base image to gain access to JVM Shenandoah GC
* test everything out